add two tower model,and fix some bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ set(Qt_Lib Qt5::Widgets Qt5::Gui Qt5::Core)
 
 
 file(GLOB HDR src/*.h)
-file(GLOB SRC src/*.cc)
+file(GLOB SRC src/*.cpp)
 
-qt5_add_resources(RC src/towerdefency.qrc)
+qt5_add_resources(RC src/tower.qrc)
 
 add_executable(towerdefency WIN32 ${HDR} ${SRC} ${RC})
 target_link_libraries(towerdefency ${Qt_Lib})
